@@ -43,8 +43,6 @@
 
 #define GWEN_NETCONNECTION_IOFLAG_WANTREAD  0x0001
 #define GWEN_NETCONNECTION_IOFLAG_WANTWRITE 0x0002
-#define GWEN_NETCONNECTION_IOFLAG_DIDREAD   0x0004
-#define GWEN_NETCONNECTION_IOFLAG_DIDWRITE  0x0008
 
 struct GWEN_NETCONNECTION {
   GWEN_LIST_ELEMENT(GWEN_NETCONNECTION);
